--- a/app-marketplace/marketplace-frontend-fix/src/app/components/common/charts/base-chart/base-chart.component.html
+++ b/app-marketplace/marketplace-frontend-fix/src/app/components/common/charts/base-chart/base-chart.component.html
@@ -10,7 +10,7 @@
 <div class="card shadow rounded p-3 bg-white-d chart">
     <div class="row">
         <div class="col-12">
-            <label class="ms-2 text-muted fs-5 text-truncate" style="max-width: 100%;">
+            <label class="ms-2 fs-5 text-truncate" style="max-width: 100%;font-weight: 500;">
                 {{title}}
             </label>
         </div>
