--- a/app-marketplace/marketplace-frontend-fix/src/app/components/common/navbar/navbar.component.html
+++ b/app-marketplace/marketplace-frontend-fix/src/app/components/common/navbar/navbar.component.html
@@ -1,95 +1,98 @@
-<div class="d-flex flex-column p-0 bg-primary-dd rounded-4 sdw" style="min-height:100%;"> 
-    <div class="col-12 text-center mt-4">
-        <img src="../assets/Ocorp.svg" style="width: 128px;" class="my-auto">
-    </div>
-
-    <div class="col-12 text-center mt-4">
-        <div class="mx-auto bg-secondary rounded rounded-circle" style="width: 128px;height: 128px;">
-            <i class="bi bi-person-fill text-white" style="line-height: 128px;font-size: 64px;"></i>
+<div class="row m-0 p-2" style="min-height:100%;"> 
+    <div class="d-flex flex-column p-0 bg-primary-dd rounded-4 sdw"> 
+        <div class="col-12 text-center mt-4">
+            <img src="../assets/Ocorp.svg" style="width: 128px;" class="my-auto">
         </div>
-    </div>
-
-    <div class="col-12 text-center text-muted mt-2" style="font-size: 12px;">
-        <label class="col-12">Nome Sobrenome</label>
-        <label class="col-12">usuario@email.com</label>
-        <label class="col-12 fw-bold">Ocorp</label>
-    </div>
-
-    <div class="col-12 text-center mt-2">
-        <button class="btn btn-primary me-2" style="font-size: 12px;" (click)="Button_Logout()">
-            <i class="bi bi-box-arrow-left"></i>
-            Logout
-        </button>
-
-        <button class="btn btn-primary" style="font-size: 12px;">
-            <i class="bi bi-gear-fill"></i>
-        </button>
-    </div>
     
-    <div class="col-12 mt-4 mb-4" style="max-height: 246px;overflow-x: auto;">
-
-        <div *ngIf="HasPermission(6)" class="px-2 mt-1" (click)="GotoRoute('/dashboard')">
-            <div class="nav-btn bg-primary-d">
-                <i class="bi bi-bar-chart-line me-1 ms-2"></i>
-                Dashboard
+        <div class="col-12 text-center mt-4">
+            <div class="mx-auto bg-secondary rounded rounded-circle" style="width: 128px;height: 128px;">
+                <i class="bi bi-person-fill text-white" style="line-height: 128px;font-size: 64px;"></i>
             </div>
         </div>
-
-        <div *ngIf="HasPermission(2)" class="px-2 mt-1" (click)="GotoRoute('/products')">
-            <div class="nav-btn bg-primary-d">
-                <i class="bi bi-box-seam-fill me-1 ms-2"></i>
-                Produtos
-            </div>
+    
+        <div class="col-12 text-center text-muted mt-2" style="font-size: 12px;">
+            <label class="col-12">Nome Sobrenome</label>
+            <label class="col-12">usuario@email.com</label>
+            <label class="col-12 fw-bold">Ocorp</label>
         </div>
-
-        <div *ngIf="HasPermission(1)" class="px-2 mt-1" (click)="GotoRoute('/users')">
-            <div class="nav-btn bg-primary-d">
-                <i class="bi bi-person-fill me-1 ms-2"></i>
-                Usuarios
-            </div>
+    
+        <div class="col-12 text-center mt-2">
+            <button class="btn btn-primary me-2" style="font-size: 12px;" (click)="Button_Logout()">
+                <i class="bi bi-box-arrow-left"></i>
+                Logout
+            </button>
+    
+            <button class="btn btn-primary" style="font-size: 12px;">
+                <i class="bi bi-gear-fill"></i>
+            </button>
         </div>
-
-        <div *ngIf="HasPermission(3)" class="px-2 mt-1" (click)="GotoRoute('/profiles')">
-            <div class="nav-btn bg-primary-d">
-                <i class="bi bi-person-vcard-fill me-1 ms-2"></i>
-                Perfis
+        
+        <div class="col-12 mt-4 mb-4" style="max-height: 246px;overflow-x: auto;">
+    
+            <div *ngIf="HasPermission(6)" class="px-2 mt-1" (click)="GotoRoute('/dashboard')">
+                <div class="nav-btn bg-primary-d">
+                    <i class="bi bi-bar-chart-line me-1 ms-2"></i>
+                    Dashboard
+                </div>
             </div>
-        </div>
-
-        <div *ngIf="HasPermission(5)" class="px-2 mt-1" (click)="GotoRoute('/establishments')">
-            <div class="nav-btn bg-primary-d">
-                <i class="bi bi-shop me-1 ms-2"></i>
-                Estabelecimentos
+    
+            <div *ngIf="HasPermission(2)" class="px-2 mt-1" (click)="GotoRoute('/products')">
+                <div class="nav-btn bg-primary-d">
+                    <i class="bi bi-box-seam-fill me-1 ms-2"></i>
+                    Produtos
+                </div>
             </div>
-        </div>
-
-        <div class="px-2 mt-1" (click)="GotoRoute('/brands')">
-            <div class="nav-btn bg-primary-d">
-                <i class="bi bi-patch-check-fill me-1 ms-2"></i>
-                Marcas
+    
+            <div *ngIf="HasPermission(1)" class="px-2 mt-1" (click)="GotoRoute('/users')">
+                <div class="nav-btn bg-primary-d">
+                    <i class="bi bi-person-fill me-1 ms-2"></i>
+                    Usuarios
+                </div>
             </div>
-        </div>
-
-        <div class="px-2 mt-1" (click)="GotoRoute('/suppliers')">
-            <div class="nav-btn bg-primary-d">
-                <i class="bi bi-truck me-1 ms-2"></i>
-                Fornecedores
+    
+            <div *ngIf="HasPermission(3)" class="px-2 mt-1" (click)="GotoRoute('/profiles')">
+                <div class="nav-btn bg-primary-d">
+                    <i class="bi bi-person-vcard-fill me-1 ms-2"></i>
+                    Perfis
+                </div>
             </div>
-        </div>
-
-        <div class="px-2 mt-1" (click)="GotoRoute('/categories')">
-            <div class="nav-btn bg-primary-d">
-                <i class="bi bi-bookmarks me-1 ms-2"></i>
-                Categorias
+    
+            <div *ngIf="HasPermission(5)" class="px-2 mt-1" (click)="GotoRoute('/establishments')">
+                <div class="nav-btn bg-primary-d">
+                    <i class="bi bi-shop me-1 ms-2"></i>
+                    Estabelecimentos
+                </div>
             </div>
-        </div>
-
-        <div class="px-2 mt-1" (click)="GotoRoute('/batches')">
-            <div class="nav-btn bg-primary-d">
-                <i class="bi bi-boxes me-1 ms-2"></i>
-                Lotes
+    
+            <div class="px-2 mt-1" (click)="GotoRoute('/brands')">
+                <div class="nav-btn bg-primary-d">
+                    <i class="bi bi-patch-check-fill me-1 ms-2"></i>
+                    Marcas
+                </div>
             </div>
+    
+            <div class="px-2 mt-1" (click)="GotoRoute('/suppliers')">
+                <div class="nav-btn bg-primary-d">
+                    <i class="bi bi-truck me-1 ms-2"></i>
+                    Fornecedores
+                </div>
+            </div>
+    
+            <div class="px-2 mt-1" (click)="GotoRoute('/categories')">
+                <div class="nav-btn bg-primary-d">
+                    <i class="bi bi-bookmarks me-1 ms-2"></i>
+                    Categorias
+                </div>
+            </div>
+    
+            <div class="px-2 mt-1" (click)="GotoRoute('/batches')">
+                <div class="nav-btn bg-primary-d">
+                    <i class="bi bi-boxes me-1 ms-2"></i>
+                    Lotes
+                </div>
+            </div>
+    
         </div>
-
     </div>
 </div>
+
