--- a/app-marketplace/marketplace-frontend-fix/src/app/components/page-profiles/page-profiles.component.html
+++ b/app-marketplace/marketplace-frontend-fix/src/app/components/page-profiles/page-profiles.component.html
@@ -1,4 +1,4 @@
-<div class="flex-column">
+<app-window>
 
     <div class="row" style="font-size: 2em;">
         <div class="col">
@@ -69,4 +69,4 @@
         </div>
 
     </div>
-</div>
+</app-window>
