--- a/app-marketplace/marketplace-frontend-fix/src/app/app.component.html
+++ b/app-marketplace/marketplace-frontend-fix/src/app/app.component.html
@@ -27,7 +27,7 @@
   }
 
   .footer{
-    min-height: 80px !important;
+    height: 80px !important;
   }
 </style>
 
@@ -46,14 +46,12 @@
 <div class="content" role="main">
   <div class="row m-0 fill-height">
 
-    <div id="navbar" class="col py-2 ps-3 pe-2 m-0" style="max-width: 250px;">
+    <div id="navbar" class="col m-0 p-0" style="max-width: 250px;">
       <app-navbar></app-navbar>
     </div>
     
-    <div class="col pe-2 py-2 m-0">
-      <app-window>
-        <router-outlet></router-outlet>
-      </app-window>
+    <div class="col m-0 p-0">
+      <router-outlet></router-outlet>
     </div>
 
   </div>
