--- a/app-marketplace/marketplace-frontend-fix/src/app/components/common/window/window.component.html
+++ b/app-marketplace/marketplace-frontend-fix/src/app/components/common/window/window.component.html
@@ -1,10 +1,8 @@
-<style>
-    .window{
-        background-color: white;
-        min-height: 100%;
-    }
-</style>
-
-<div class="m-0 p-2 window rounded shadow row flex-column">
-    <ng-content></ng-content>
+<div class="row m-0 p-2" style="min-height: 100%;">
+    <div class="col m-0 bg-white rounded">
+        <div class="p-2">
+            <ng-content></ng-content>
+        </div>
+    </div>
 </div>
+
