--- a/app-marketplace/marketplace-frontend-fix/src/app/components/page-brands/page-brands.component.html
+++ b/app-marketplace/marketplace-frontend-fix/src/app/components/page-brands/page-brands.component.html
@@ -1,4 +1,4 @@
-<div class="flex-column">
+<app-window>
 
     <div class="row" style="font-size: 2em;">
         <div class="col">
@@ -104,4 +104,4 @@
 
     </div>
 
-</div>
+</app-window>
