--- a/app-marketplace/marketplace-frontend-fix/src/app/components/page-login/page-login.component.html
+++ b/app-marketplace/marketplace-frontend-fix/src/app/components/page-login/page-login.component.html
@@ -23,13 +23,13 @@
     </div>
 </div> -->
 
-<div class="row">
+<div class="row m-0">
     <div class="col-6 align-self-center text-end">
         <img src="../../../assets/Storyset-Business.svg" style="width: 400px; height: 400px;">
     </div>
 
     <div class="col-6 p-5">
-        <div class="row bg-primary-w text-white p-2 rounded sdw" *ngIf="!isLoading"
+        <div class="row bg-primary-w text-white p-2 rounded shadow" *ngIf="!isLoading"
             style="width: 400px; height: 400px;">
             <div class="col-12 text-center my-2">
                 <img src="../../../assets/Ocorp.svg" style="width: 128px;">
@@ -69,7 +69,7 @@
             </div>
         </div>
 
-        <div class="row bg-primary-w text-white p-2 rounded sdw" *ngIf="isLoading" style="width: 400px; height: 400px;">
+        <div class="row bg-primary-w text-white p-2 rounded shadow" *ngIf="isLoading" style="width: 400px; height: 400px;">
             <app-spinner-white class="my-auto"></app-spinner-white>
         </div>
 
