--- a/app-marketplace/marketplace-frontend-fix/src/app/components/page-profiles/page-profiles.component.html
+++ b/app-marketplace/marketplace-frontend-fix/src/app/components/page-profiles/page-profiles.component.html
@@ -1,7 +1,7 @@
 <app-window>
 
-    <div class="row" style="font-size: 2em;">
-        <div class="col">
+    <div class="row">
+        <div class="col fs-5">
             <i class="bi bi-person-vcard-fill"></i>
             Perfis
         </div>
