--- a/app-marketplace/marketplace-frontend-fix/src/app/components/common/charts/base-chart/base-chart.component.html
+++ b/app-marketplace/marketplace-frontend-fix/src/app/components/common/charts/base-chart/base-chart.component.html
@@ -1,13 +1,4 @@
-<style>
-    .chart{
-        max-height: 300px;
-        height: 100%;
-    }
-
-
-</style>
-
-<div class="card shadow rounded p-3 bg-white-d chart">
+<app-card >
     <div class="row">
         <div class="col-12">
             <label class="ms-2 fs-5 text-truncate" style="max-width: 100%;font-weight: 500;">
@@ -16,7 +7,7 @@
         </div>
     </div>
 
-    <div class="row">
+    <div class="row" style="height: 240px;">
         <div class="col-12">
             <canvas class="m-auto w-100"  style="max-height: 240px;"
                 baseChart
@@ -28,4 +19,4 @@
             </canvas>
         </div>
     </div>
-</div>
+</app-card>
