--- a/app-marketplace/marketplace-frontend-fix/src/app/components/common/window/window.component.html
+++ b/app-marketplace/marketplace-frontend-fix/src/app/components/common/window/window.component.html
@@ -1,5 +1,5 @@
 <div class="row m-0 p-2" style="min-height: 100%;">
-    <div class="col m-0 bg-white rounded">
+    <div class="col m-0 bg-white rounded shadow">
         <div class="p-2">
             <ng-content></ng-content>
         </div>
