--- a/app-marketplace/marketplace-frontend-fix/src/app/components/page-users/page-users.component.html
+++ b/app-marketplace/marketplace-frontend-fix/src/app/components/page-users/page-users.component.html
@@ -1,6 +1,6 @@
 <app-window>
-    <div class="row" style="font-size: 2em;">
-        <div class="col">
+    <div class="row">
+        <div class="col fs-5">
             <i class="bi bi-person-fill"></i>
             Usuários
         </div>
