--- a/app-marketplace/marketplace-frontend-fix/src/styles.scss
+++ b/app-marketplace/marketplace-frontend-fix/src/styles.scss
@@ -1,15 +1,9 @@
+
+
 /* You can add global styles to this file, and also import other style files */
 $primary: #294566;
 $success: #4d9b5c;
 $danger: #AD343E;
-
-.fs-7 {
-    font-size: 12px;
-}
-
-.fs-8 {
-    font-size: 8px;
-}
 
 /* Importing Bootstrap SCSS file. */
 @import "~bootstrap-icons/font/bootstrap-icons.css";
@@ -18,7 +12,37 @@ $danger: #AD343E;
 @import "../node_modules/ngx-spinner/animations/square-jelly-box.css";
 @import '../node_modules/bootstrap/scss/bootstrap';
 @import "~@ng-select/ng-select/themes/default.theme.css";
+@import "/src/app/helpers/font-styles.scss";
 
+.btn {
+    --bs-btn-padding-x: 8px;
+    --bs-btn-padding-y: 4px;
+    --bs-btn-font-size: 14px;
+}
+
+.form-control {
+    padding: 4px 4px;
+    font-size: 14px;
+    font-weight: 400;
+    border-radius: 4px;
+}
+
+.form-select{
+    font-size: 14px;
+    padding: 4px 48px 4px 4px;
+    border-radius: 4px;
+}
+
+.form-control-color {
+    width: 31px;
+    height: 31px;
+    padding: 2px;
+    border-radius: 0px;
+}
+
+.on-hover:hover{
+    background-color: #bebebe;
+}
 
 .input-disabled {
     color: grey;
@@ -29,18 +53,6 @@ $danger: #AD343E;
 .required::after {
     content: "*";
     color: $danger;
-}
-
-.sdw {
-    box-shadow: 0px 3px 8px 3px rgba(0, 0, 0, 0.4);
-}
-
-.shadow-2 {
-    box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.1);
-}
-
-.pointer {
-    cursor: pointer;
 }
 
 * {
@@ -91,21 +103,6 @@ $danger: #AD343E;
     color: #172738;
 }
 
-.tb-overflow-text {
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    max-width: 0;
-}
-
-.tb-custom td {
-    font-size: 1em;
-}
-
-.tb-custom th {
-    font-size: 0.8em;
-}
-
 .btn-transparent {
     background-color: transparent;
     border: none;
@@ -114,10 +111,6 @@ $danger: #AD343E;
 
 .dropdown-toggle::after {
     content: none;
-}
-
-.fs-7 {
-    font-size: 14px;
 }
 
 hr{
