[OCO-39] Marketplace - Carrega dados do usuário na barra de navegação quando o usuário é logado

--- a/app-marketplace/marketplace-frontend-fix/src/app/components/common/navbar/navbar.component.html
+++ b/app-marketplace/marketplace-frontend-fix/src/app/components/common/navbar/navbar.component.html
@@ -15,9 +15,9 @@
         </div>
     
         <div class="col-12 text-center text-muted mt-2" style="font-size: 12px;">
-            <label class="col-12">Nome Sobrenome</label>
-            <label class="col-12">usuario@email.com</label>
-            <label class="col-12 fw-bold">Ocorp</label>
+            <label class="col-12 text-truncate px-3" id="nav_name">Nome Sobrenome</label>
+            <label class="col-12 text-truncate px-3" id="nav_email">usuario@email.com</label>
+            <label class="col-12 text-truncate px-3 fw-bold" id="nav_client">Ocorp</label>
         </div>
     
         <div class="col-12 text-center mt-2">
