[OCO-40] Marketplace - Ajustes na criação de novo usuário

--- a/app-marketplace/marketplace-frontend-fix/src/app/components/common/progress-bar/progress-bar.component.html
+++ b/app-marketplace/marketplace-frontend-fix/src/app/components/common/progress-bar/progress-bar.component.html
@@ -28,7 +28,7 @@
     </div>
     
     <div class="col" *ngFor="let step of middleSteps">
-        <div class="col-12 text-center">
+        <div class="col-12 text-center text-truncate">
             {{step}}
         </div>
 
