--- a/app-marketplace/marketplace-frontend-fix/src/app/components/page-login/modals/modal-user-register/modal-user-register.component.html
+++ b/app-marketplace/marketplace-frontend-fix/src/app/components/page-login/modals/modal-user-register/modal-user-register.component.html
@@ -37,6 +37,17 @@
                             class="form-control" placeholder="Digite seu numero..." (change)="ValidateField('phoneNumber')">
                     </div>
                 </div>
+
+                <div class="row mt-2">
+                    <div class="col-12 mt-2">
+                        <label for="birthdayDate" class="required">Data de nascimento</label>
+                        <input id="birthdayDate" [(ngModel)]="data.birthdayDate" type="date" class="form-control"
+                            placeholder="Digite sua data de nascimento ..."
+                            (change)="ValidateField('birthdayDate')">
+                    </div>
+                </div>
+
+                
             </div>
 
             <div *ngIf="currentStep == 1">
@@ -66,7 +77,44 @@
             </div>
 
             <div *ngIf="currentStep == 2">
+                <div class="my-auto mt-4">
+                    <label class="col-12 text-center fs-6">
+                        Foto de perfil
+                    </label>
+
+                    <div class="col-12 text-center">
+                        <img [src]="currentImage || 'assets/images/placeholders/128.png'" class="rounded-circle img-responsive mt-2"
+                            width="128" height="128">
+                    </div>
+
+                    <div class="col-12 text-center mt-2">
+                        <label class="btn btn-primary" for="file-input"><i
+                                class="bi bi-upload me-2"></i>Upload</label>
+                    </div>
+
+                    <div class="col-12 mt-2">
+                        <input class="form-control" type="file" id="file-input" hidden (change)="UpdateImage($event)">
+                    </div>
+
+                    <div class="col-12 mt-2 text-center">
+                        <p class="col-6 mx-auto text-muted fs-8">Para um melhor resultado , envie uma foto com
+                            pelo menos 128px por 128px no formato .jpg</p>
+                    </div>
+                </div>
+            </div>
+
+            <div *ngIf="currentStep == 3">
                 <app-address-form [(data)]="address" [(isFormValid)]="isAddressValid"></app-address-form>
+            </div>
+
+            <div *ngIf="currentStep == 4">
+                <div class="row mt-2">
+                    <div class="col">
+                        <label for="clientName" class="required">Nome da empresa</label>
+                        <input id="clientName" [(ngModel)]="data.clientName" type="text" class="form-control"
+                            placeholder="Digite o nome da sua empresa ..." (change)="ValidateField('clientName')">
+                    </div>
+                </div>
             </div>
 
 
@@ -103,5 +151,7 @@
         class="btn btn-outline-primary">Voltar</button>
     <button *ngIf="currentStep == 0" type="button" [disabled]="!IsStepValid(0)" (click)="NextStep()" class="btn btn-primary">Continuar</button>
     <button *ngIf="currentStep == 1" type="button" [disabled]="!IsStepValid(1)" (click)="NextStep()" class="btn btn-primary">Continuar</button>
-    <button *ngIf="currentStep == 2" type="button" [disabled]="!IsStepValid(2)" class="btn btn-success text-light" (click)="Submit()">Cadastrar</button>
+    <button *ngIf="currentStep == 2" type="button" [disabled]="!IsStepValid(2)" (click)="NextStep()" class="btn btn-primary">Continuar</button>
+    <button *ngIf="currentStep == 3" type="button" [disabled]="!IsStepValid(3)" (click)="NextStep()" class="btn btn-primary">Continuar</button>
+    <button *ngIf="currentStep == 4" type="button" [disabled]="!IsStepValid(4)" class="btn btn-success text-light" (click)="Submit()">Cadastrar</button>
 </div>
