[OCO-31] Marketplace - Finaliza Tela de Lotes

--- a/app-marketplace/marketplace-frontend-fix/src/app/components/common/window-transparent/window-transparent.component.html
+++ b/app-marketplace/marketplace-frontend-fix/src/app/components/common/window-transparent/window-transparent.component.html
@@ -1,5 +1,5 @@
 <div class="row m-0 p-2" style="min-height: 100%;">
-    <div class="col m-0 rounded {{class}}">
+    <div class="col m-0 rounded {{class}} page">
         <div class="p-2">
             <ng-content> </ng-content>
         </div>
