--- a/app-marketplace/marketplace-frontend-fix/src/app/app.component.html
+++ b/app-marketplace/marketplace-frontend-fix/src/app/app.component.html
@@ -18,10 +18,6 @@
     margin-top: 60px;
   }
 
-  .page{
-    padding: 10px 40px;
-  }
-
   .fill-height {
     min-height: calc(100vh - 60px - 80px);
   }
@@ -29,6 +25,8 @@
   .footer{
     height: 80px !important;
   }
+
+  
 </style>
 
 <head>
@@ -50,7 +48,7 @@
       <app-navbar></app-navbar>
     </div>
     
-    <div class="col m-0 p-0">
+    <div class="col m-0 p-0" style="max-width: calc(100vw - 250px);">
       <router-outlet></router-outlet>
     </div>
 
