--- a/app-marketplace/marketplace-frontend-fix/src/app/components/common/pagination/pagination.component.html
+++ b/app-marketplace/marketplace-frontend-fix/src/app/components/common/pagination/pagination.component.html
@@ -11,10 +11,10 @@
 
     <div class="col-3 my-auto fs-7" *ngIf="(totalItems != 0)">
         <div class="row">
-            <div class="col-6 my-auto p-0 text-end">
+            <div class="col-auto my-auto p-0 text-end">
                 <label>Items : &nbsp;</label>
             </div>
-            <div class="col-6 p-0">
+            <div class="col p-0">
                 <select class="my-auto form-select form-select-sm text-center" style="max-width: 80px;" [(ngModel)]="itemsPerPage_ddl" (change)="DDL_ChangeMaxItens()">
                     <option value="5">5</option>
                     <option value="10">10</option>
