--- a/app-marketplace/marketplace-frontend-fix/src/app/components/common/window/window.component.html
+++ b/app-marketplace/marketplace-frontend-fix/src/app/components/common/window/window.component.html
@@ -1,8 +1,11 @@
+<style>
+    
+</style>
+
 <div class="row m-0 p-2" style="min-height: 100%;">
-    <div class="col m-0 bg-white rounded shadow">
+    <div class="col m-0 bg-white rounded shadow page">
         <div class="p-2">
             <ng-content></ng-content>
         </div>
     </div>
 </div>
-
