[OCO-21] Marketplace - Adiciona tela de cadasto de Produtos

--- a/app-marketplace/marketplace-frontend-fix/src/app/components/common/forms/input-image/input-image.component.html
+++ b/app-marketplace/marketplace-frontend-fix/src/app/components/common/forms/input-image/input-image.component.html
@@ -8,7 +8,7 @@
 </div>
 
 <div class="col-12 mt-2">
-    <input class="form-control" accept="image/png, image/jpg, image/jpeg" type="file" id="{{inputId}}" hidden (change)="UpdateImage($event)">
+    <input class="form-control" accept="image/png, image/jpg, image/jpeg, image/webp" type="file" id="{{inputId}}" hidden (change)="UpdateImage($event)">
 </div>
 
 <div class="col-12 text-center mt-2">
