--- a/app-marketplace/marketplace-frontend-fix/src/app/components/page-batches/tabs/tab-batch-new/steps/step-batch-product-selection/step-batch-product-selection.component.html
+++ b/app-marketplace/marketplace-frontend-fix/src/app/components/page-batches/tabs/tab-batch-new/steps/step-batch-product-selection/step-batch-product-selection.component.html
@@ -22,7 +22,7 @@
                 <div class="border-end col text-center my-auto" style="max-width: 80px;"><b>{{item.id}}</b>
                 </div>
                 <div class="border-end col text-center" style="max-width: 128px;">
-                    <img src="{{item.imageUrl}}" style="height: 64px;" alt="">
+                    <img src="{{item.imageGuid}}" style="height: 64px;" alt="">
                 </div>
                 <div class="border-end col text-truncate text-start my-auto">{{item.name}}</div>
                 <div class="col">
