--- a/app-marketplace/marketplace-frontend-fix/src/app/components/common/product-card/product-card.component.html
+++ b/app-marketplace/marketplace-frontend-fix/src/app/components/common/product-card/product-card.component.html
@@ -1,10 +1,10 @@
 <div class="p-1">
     <div class="row bg-primary-www rounded-1 p-1">
-        <div class="col p-0" style="max-width: 100px;">
-            <div class="bg-white rounded-1 p-1" style="height: 100%;">
+        <div class="col-auto p-0">
+            <div class="bg-white rounded-1 p-1" style="height: 128px;width: 128px;">
                 <div style="
                 height: 100%; 
-                background-image: url('{{product.imageUrl}}');
+                background-image: url('{{product.imageGuid}}');
                 background-size: contain;
                 background-position: center;
                 background-repeat: no-repeat;">
