--- a/app-marketplace/marketplace-frontend-fix/src/styles.scss
+++ b/app-marketplace/marketplace-frontend-fix/src/styles.scss
@@ -14,6 +14,19 @@ $danger: #AD343E;
 @import "~@ng-select/ng-select/themes/default.theme.css";
 @import "/src/app/helpers/font-styles.scss";
 
+.ng-select.custom {
+    font-size: 14px;
+    font-weight: 400;
+    border-radius: 4px;
+}
+
+.ng-select.custom .ng-select-container  { 
+    font-size: 14px;           
+    min-height: 0px;
+    border-radius: 4px;
+    font-weight: 400;
+}
+
 .page {
     display: block;
     max-height: calc(100vh - 160px);
