[OCO-21] Marketplace - Adiciona Correções e Config Docker

--- a/app-marketplace/marketplace-frontend-fix/src/app/components/page-batches/tabs/tab-batch-new/steps/step-batch-address-selection/step-batch-address-selection.component.html
+++ b/app-marketplace/marketplace-frontend-fix/src/app/components/page-batches/tabs/tab-batch-new/steps/step-batch-address-selection/step-batch-address-selection.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="!isLoading">
+<div *ngIf="!isLoading" class="row m-0 p-0">
     <div class="row text-center py-4 mt-3" *ngIf="data.length == 0 && !isLoading">
         <h5>Nenhum resultado encontrado.</h5>
     </div>
