[OCO-21] Marketplace - Correções

--- a/app-marketplace/marketplace-frontend-fix/src/app/components/common/forms/form-body/form-body.component.html
+++ b/app-marketplace/marketplace-frontend-fix/src/app/components/common/forms/form-body/form-body.component.html
@@ -1,4 +1,4 @@
-<div class="f-header">
+<div class="f-header mt-2">
     <ng-content></ng-content>
 
     <app-alert-danger [errors]="errors"></app-alert-danger>
