--- a/app-marketplace/marketplace-frontend-fix/src/app/components/common/forms/form-bottom/form-bottom.component.html
+++ b/app-marketplace/marketplace-frontend-fix/src/app/components/common/forms/form-bottom/form-bottom.component.html
@@ -1,4 +1,4 @@
-<div class="row f-bottom bg-primary">
+<div class="row f-bottom bg-white-dd">
     <div class="col-12 text-end">
         <ng-content></ng-content>
     </div>
