--- a/app-marketplace/marketplace-frontend-fix/src/app/components/common/forms/form-bottom/form-bottom.component.scss
+++ b/app-marketplace/marketplace-frontend-fix/src/app/components/common/forms/form-bottom/form-bottom.component.scss
@@ -7,7 +7,7 @@
     border-top-left-radius: 0px;
     border-top-right-radius: 0px;
     border-style: solid;
-    border-color: gray;
-    padding: 8px;
+    border-color: lightgray;
+    padding: 16px;
     margin: 0px;
 }
