--- a/app-marketplace/marketplace-frontend-fix/src/app/components/page-categories/modals/modal-category-edit/modal-category-edit.component.html
+++ b/app-marketplace/marketplace-frontend-fix/src/app/components/page-categories/modals/modal-category-edit/modal-category-edit.component.html
@@ -4,15 +4,20 @@
 </div>
 
 <div class="modal-body bg-white" *ngIf="!loading">
-    <div class="row p-2">
+    <div class="row m-0 p-0">
 
         <div class="col-12">
-            <label class="text-primary fw-bolder fs-6">Categoria</label>
-            <hr>
+            <div class="row">
+                <div class="col-auto">
+                    <label class="fs-6">Categoria</label>
+                </div>
+            </div>
         </div>
 
+        <hr>
+
         <div class="col-12 mt-2">
-            <div class="row">
+            <div class="row m-0 p-0">
                 <div class="col">
                     <label for="category" class="required">Nome</label>
                     <input id="category" [(ngModel)]="category.name" type="text" class="form-control"
@@ -27,29 +32,23 @@
         </div>
     </div>
 
-    <div class="row mt-4">
+    <div class="row m-0 p-0 mt-4">
+        
         <div class="col-12">
             <div class="row">
-                <div class="col-6">
-                    <label class="text-primary fw-bolder fs-6">Subcategorias</label>
+                <div class="col-auto d-flex">
+                    <label class="fs-6 my-auto">Subcategorias</label>
+                </div>
+                <div class="col text-end">
+                    <button class="btn btn-success" (click)="AddSubcategory()"><i class="bi bi-plus-lg text-white"></i></button>
                 </div>
             </div>
+        </div>
 
-            <hr>
+        <hr class="mt-2">
 
-            <div class="col-12 mt-2 pb-2" style="max-height: 220px; overflow: auto;">
-                <!-- <div *ngFor="let item of category.subCategories" class="col-12 rounded bg-primary-www mt-1">
-                    <div class="col-12 p-2">
-                        <div class="row m-0">
-                            <label class="col-3">{{item.name}}</label>
-                            <div class="col text-end">
-                                <span class="badge" style="background-color: {{item.color}};">
-                                    <small>{{item.name}}</small>
-                                </span>
-                            </div>
-                        </div>
-                    </div>
-                </div> -->
+        <div class="col-12">
+            <div class="row p-0 m-0" style="max-height: 220px; overflow: auto;">
                 <div *ngFor="let item of category.subCategories; let i = index" class="row m-0">
                     <div class="col">
                         <label for="subcategory_{{i}}" class="required">Nome</label>
